# llm4compiler

./: .gitignore  README.md
docker/: 42_run_docker.sh  Dockerfile  docker-compose.yml  llm4compiler.Dockerfile  requirements.txt  run_docker.sh
src/common/: draw.py  preprocessing_utils.py
src/cost_model/: README.md  all_benchmark_pre_train.txt  build_dataset.py  build_vocabulary.py  custom_logging.py  extract_pass_seq_by_latency.py  finetune-llama.py  load_llama_tokenizer.py  merge_all_file.py  merge_tokenizers.py  preprocessing_arm_assembly.py  requirements.txt  run_clm_sft_with_peft.py  run_demo_codellama.py  run_sft_predict.py  sft_args.py
src/cost_model copy/: custom_logging.py
src/cost_model copy/inference/: run_demo_codellama.py
src/cost_model copy/llama_data/cbench_wo_line_no/vocabulary_cbench_arm64_assembly_wo_line_no/: cbench_arm64_assembly_wo_line_no.model
src/cost_model copy/llm_serving/: bak_init.py  llm_server.py  llmserving.proto  llmserving_pb2.py  llmserving_pb2.pyi  llmserving_pb2_grpc.py
src/cost_model copy/preprocessing/: build_vocabulary.py  merge_all_file.py  merge_tokenizers.py  preprocessing_arm_assembly.py  read_hotspot_json.py
src/cost_model copy/scripts/: run_llm_serving.sh  run_sentencepiece.sh  run_sft.sh
src/cost_model copy/tests/: regular_expression_unittest.py
src/cost_model copy/training/: run_clm_sft_with_peft.py
src/cost_model/inference/: load_torch_pt.py  run_demo_codellama.py  run_sft_predict.py
src/cost_model/llama_data/: codellama_vocab.txt  merged_codellama_vocab.txt
src/cost_model/llama_data/cbench_wo_line_no/merged_tokenizer_hf/: tokenizer.model
src/cost_model/llama_data/cbench_wo_line_no/vocabulary_cbench_arm64_assembly_wo_line_no/: cbench_arm64_assembly_wo_line_no.vocab
src/cost_model/llm_serving/: llm_client.py  llm_server.py
src/cost_model/merged_tokenizer_sp/: cbench_ir_llama.model
src/cost_model/preprocessing/: arm_assembly_regular_expression.py  extract_pass_seq_by_latency.py
src/cost_model/scripts/: ds_zero2_no_offload.json.bak  run_predict_sft.sh  run_pretrain.sh  run_sentencepiece.sh  run_sft.sh
src/cost_model/training/: run_clm_pretrain_with_peft.py
src/cpp/: CMakeLists.txt  build.sh  count_llvm_ir_bb.cpp  extract_cpp_functions.cpp  extract_llvm_ir_dbg.cpp  filter_declare_only_functions.cpp
src/decompilation/: Makefile  Makefile.angha_bench  README.md  compile_AnghaBench.py  extract_assembly_info.py  filter_redundant_angha.py  fsdp_mnist.py  load_train_state.py  merge_peft_weights_to_llama.py  openai-gpt.py  pairwise_c_assembly.py  pairwise_ir_assembly.py  preprocessing_assembly.py  preprocessing_c.py  preprocessing_llvm_ir.py  run_compile_anghabench.sh  run_tinyllama.py  translation_decoder_only_tutorial.py  translation_seq2seq_tutorial.py
src/expr_llvm/: run_all.sh  test.c
